$Id: CHANGES,v 1.15 2001/12/28 08:38:18 psavola Exp $

12/28/2001	Small cleanups.  AdvSendAdvert is implicitly off by
		default.  Check configuration file permissions; must
		not be writable by others, and if non-root,
		not by self/own group.  By Marko Myllynen.

12/21/2001	Check via sysctl that IPv6 forwarding is enabled;
		exit unless debugging is enabled.  Triggered by
		Marko Myllynen.

11/22/2001	MinRtrAdvInterval for MIPv6 is 0.05 seconds, not 0.5.

11/20/2001	Rework BSD device memory management a bit, minor cleanups.
		Version bumped to 0.7.0.

11/14/2001	Maintainership of radvd transferred from Lars Fenneberg
		to Pekka Savola and Nathan Lutchansky.  Lars' CVS
		repository adopted, and changes merged from the -pX
		branch.

08/29/2001	Minor change for NetBSD 1.5.1 compatibility.
		(Nathan Lutchansky)

07/20/2001	Support for non-multicast links, like ISATAP.
		(Nathan Lutchansky)

07/03/2001	Minimum MTU has been changed to 1280 in the latest RFC's.
		(Pekka Savola)

06/30/2001	Check for possible buffer overflows; replace strcpy with
		strncpy.  No fatals found.  Remove redunant radvd -t check.
		(Pekka Savola)

06/24/2001	Fix 1-byte overflow in /proc/net/igmp6 handling,
                clean out possible memory garbage when sending RA's
		(patch from <yoshfuji@linux-ipv6.org>).

06/19/2001	When dropping root, also set up supplementary groups
		properly.  On Linux, when sending RA's, check that the
		interface has joined all-routers multicast group.  Add a few
		RFC2461 MUST sanity checks when receiving datagrams.  Clean
		out non-EUI64 addressing scheme and other minor bits.
		(Pekka Savola)

04/28/2001	Misc cleanup and bugfixes, automake support.

03/28/2001	Grammar cleanup. Integrated 6to4 support through
		"Base6to4Interface" option in prefix configuration. Signal
		handling fixed by blocking on select() rather than recvmsg()
		so SIGTERM/HUP take effect immediately now. (Nathan Lutchansky)

03/27/2001	Security fixes: close stdin/out and chdir("/") via