@@ -1,13 +1,11 @@
 /*
- *   $Id: radvdump.c,v 1.6 2001/11/14 19:58:11 lutchann Exp $
+ *   $Id: radvdump.c,v 1.7 2001/12/31 11:40:56 psavola Exp $
  *
  *   Authors:
- *    Lars Fenneberg		<lf@elemental.net>	 
+ *    Lars Fenneberg		<lf@elemental.net>
+ *    Marko Myllynen		<myllynen@lut.fi>
  *
- *    Marko Myllynen		<myllynen@lut.fi>	
- *    	- Mobile IPv6 support
- *
- *   This software is Copyright 1996-2000 by the above mentioned author(s), 
+ *   This software is Copyright 1996-2000 by the above mentioned author(s),
  *   All Rights Reserved.
  *
  *   The license which is distributed with this software in the file COPYRIGHT
@@ -20,12 +18,13 @@
 #include <includes.h>
 #include <radvd.h>
 
-char usage_str[] = "[-vhf] [-d level]";
+char usage_str[] = "[-vhfe] [-d level]";
 
 #ifdef HAVE_GETOPT_LONG
 struct option prog_opt[] = {
 	{"debug", 1, 0, 'd'},
-	{"file-output", 0, 0, 'f'},
+	{"file-format", 0, 0, 'f'},
+	{"exclude-defaults", 0, 0, 'e'},
 	{"version", 0, 0, 'v'},
 	{"help", 0, 0, 'h'},
 	{NULL, 0, 0, 0}
@@ -37,15 +36,16 @@ int sock = -1;
 
 void version(void);
 void usage(void);
-void print_ra(unsigned char *, int, struct sockaddr_in6 *, int);
-void print_ff(unsigned char *, int, struct sockaddr_in6 *, int);
+void print_ra(unsigned char *, int, struct sockaddr_in6 *, int, int);
+void print_ff(unsigned char *, int, struct sockaddr_in6 *, int, int, int);
 
 int
 main(int argc, char *argv[])
 {
 	unsigned char msg[MSG_SIZE];
 	int c, len, hoplimit;
-	int fout = 0;
+	int fform = 0;
+	int edefs = 0;
 	struct sockaddr_in6 rcv_addr;
         struct in6_pktinfo *pkt_info = NULL;
 #ifdef HAVE_GETOPT_LONG
@@ -56,9 +56,9 @@ main(int argc, char *argv[])
 
 	/* parse args */
 #ifdef HAVE_GETOPT_LONG
-	while ((c = getopt_long(argc, argv, "d:fhv", prog_opt, &opt_idx)) > 0)
+	while ((c = getopt_long(argc, argv, "d:fehv", prog_opt, &opt_idx)) > 0)
 #else
-	while ((c = getopt(argc, argv, "d:fhv")) > 0)
+	while ((c = getopt(argc, argv, "d:fehv")) > 0)
 #endif
 	{
 		switch (c) {
@@ -66,7 +66,10 @@ main(int argc, char *argv[])
 			set_debuglevel(atoi(optarg));
 			break;
 		case 'f':
-			fout = 1;
+			fform = 1;
+			break;
+		case 'e':
+			edefs = 1;
 			break;
 		case 'v':
 			version();
@@ -123,7 +126,7 @@ main(int argc, char *argv[])
 				exit(1);
 			}
 
-			dlog(LOG_DEBUG, 4, "if_index %d", pkt_info->ipi6_ifindex);
+			dlog(LOG_DEBUG, 4, "receiver if_index: %d", pkt_info->ipi6_ifindex);
 
 			if (icmph->icmp6_type == ND_ROUTER_SOLICIT)
 			{
@@ -131,10 +134,10 @@ main(int argc, char *argv[])
 			}
 			else if (icmph->icmp6_type == ND_ROUTER_ADVERT)
 			{
-				if (!fout)
-					print_ra(msg, len, &rcv_addr, hoplimit);
+				if (!fform)
+					print_ra(msg, len, &rcv_addr, hoplimit, pkt_info->ipi6_ifindex);
 				else
-					print_ff(msg, len, &rcv_addr, hoplimit);
+					print_ff(msg, len, &rcv_addr, hoplimit, pkt_info->ipi6_ifindex, edefs);
 			}
         	}
 		else if (len == 0)
@@ -144,7 +147,7 @@ main(int argc, char *argv[])
         	}
         	else
         	{
-			log(LOG_ERR, "recv_rs: %s", strerror(errno));
+			log(LOG_ERR, "recv_rs_ra: %s", strerror(errno));
 			exit(1);
         	}
         }                                                                                            
@@ -153,12 +156,13 @@ main(int argc, char *argv[])
 }
 
 void
-print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
+print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit, int if_index)
 {
 	struct nd_router_advert *radvert;
 	char addr_str[INET6_ADDRSTRLEN];
 	uint8_t *opt_str;
 	int i;
+	char if_name[IFNAMSIZ];
 
 	if (get_debuglevel() > 2)
 	{
@@ -182,8 +186,12 @@ print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 
 	print_addr(&addr->sin6_addr, addr_str);
 	printf("Router advertisement from %s (hoplimit %d)\n", addr_str, hoplimit);
+	if_indextoname(if_index, if_name);
+	printf("Received by interface %s\n", if_name);
 
 	radvert = (struct nd_router_advert *) msg;
+
+	printf("\t# Note: {Min,Max}RtrAdvInterval cannot be obtained with radvdump\n");
 
 	printf("\tAdvCurHopLimit: %d\n", (int) radvert->nd_ra_curhoplimit);
 
@@ -330,36 +338,46 @@ print_ra(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 }
 
 void
-print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
+print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit, int if_index, int edefs)
 {
 	struct nd_router_advert *radvert;
 	char addr_str[INET6_ADDRSTRLEN];
 	uint8_t *opt_str;
 	int orig_len = len;
+	char if_name[IFNAMSIZ];
 
 	print_addr(&addr->sin6_addr, addr_str);
-	printf("#\n# Configuration generated by radvdump\n");
-	printf("# based on Router advertisement from %s\n#\n", addr_str);
-	printf("\ninterface eth0\n{\n\tAdvSendAdvert on;\n");
+	printf("#\n# radvd configuration generated by radvdump %s\n", VERSION);
+	printf("# based on Router Advertisement from %s\n", addr_str);
+	if_indextoname(if_index, if_name);
+	printf("# received by interface %s\n", if_name);
+	printf("#\n\ninterface %s\n{\n\tAdvSendAdvert on;\n", if_name);
+
+	printf("\t# Note: {Min,Max}RtrAdvInterval cannot be obtained with radvdump\n");
 
 	radvert = (struct nd_router_advert *) msg;
 
+	if (!edefs || DFLT_AdvManagedFlag != (ND_RA_FLAG_MANAGED == (radvert->nd_ra_flags_reserved & ND_RA_FLAG_MANAGED)))
 	printf("\tAdvManagedFlag %s;\n", 
 		(radvert->nd_ra_flags_reserved & ND_RA_FLAG_MANAGED)?"on":"off");
 
+	if (!edefs || DFLT_AdvOtherConfigFlag != (ND_RA_FLAG_OTHER == (radvert->nd_ra_flags_reserved & ND_RA_FLAG_OTHER)))
 	printf("\tAdvOtherConfigFlag %s;\n", 
 		(radvert->nd_ra_flags_reserved & ND_RA_FLAG_OTHER)?"on":"off");
 
+	if (!edefs || DFLT_AdvReachableTime != (unsigned long)ntohl(radvert->nd_ra_reachable))
 	printf("\tAdvReachableTime %lu;\n", (unsigned long)ntohl(radvert->nd_ra_reachable));
 
+	if (!edefs || DFLT_AdvRetransTimer != (unsigned long)ntohl(radvert->nd_ra_retransmit))
 	printf("\tAdvRetransTimer %lu;\n", (unsigned long)ntohl(radvert->nd_ra_retransmit));
 
+	if (!edefs || DFLT_AdvCurHopLimit != (int) radvert->nd_ra_curhoplimit)
 	printf("\tAdvCurHopLimit %d;\n", (int) radvert->nd_ra_curhoplimit);
 
 	/* Mobile IPv6 ext */
+	if (!edefs || DFLT_AdvHomeAgentFlag != (ND_RA_FLAG_HOME_AGENT == (radvert->nd_ra_flags_reserved & ND_RA_FLAG_HOME_AGENT)))
 	printf("\tAdvHomeAgentFlag %s;\n", 
 		(radvert->nd_ra_flags_reserved & ND_RA_FLAG_HOME_AGENT)?"on":"off");
-
 
 	len -= sizeof(struct nd_router_advert);
 
@@ -402,28 +420,41 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 		case ND_OPT_MTU:
 			mtu = (struct nd_opt_mtu *)opt_str;
 
+			if (!edefs || DFLT_AdvLinkMTU != (unsigned long)ntohl(mtu->nd_opt_mtu_mtu))
 			printf("\tAdvLinkMTU %lu;\n", (unsigned long)ntohl(mtu->nd_opt_mtu_mtu));
 			break;
 		case ND_OPT_SOURCE_LINKADDR:
+			/* XXX: !DFLT depends on current DFLT_ value */
+			if (!edefs || !DFLT_AdvSourceLLAddress)
 			printf("\tAdvSourceLLAddress on;\n");
 			break;
 		/* Mobile IPv6 ext */
 		case ND_OPT_RTR_ADV_INTERVAL:
 			a_ival = (struct AdvInterval *)opt_str;
 
+			/* XXX: !DFLT depends on current DFLT_ value */
+			if (!edefs || !DFLT_AdvIntervalOpt)
 			printf("\tAdvIntervalOpt on;\n");
 			break;
 		/* Mobile IPv6 ext */
 		case ND_OPT_HOME_AGENT_INFO:
 			ha_info = (struct HomeAgentInfo *)opt_str;
 
+			/* XXX: !DFLT depends on current DFLT_ value */
+			if (!edefs || !DFLT_AdvHomeAgentInfo)
 			printf("\tAdvHomeAgentInfo on;\n");
+
+			if (!edefs || DFLT_HomeAgentPreference != (unsigned short)ntohs(ha_info->preference))
 			printf("\tHomeAgentPreference %hu;\n", (unsigned short)ntohs(ha_info->preference));
+			/* Hum.. */
+			if (!edefs || (3*DFLT_MaxRtrAdvInterval) != (unsigned short)ntohs(ha_info->lifetime))
 			printf("\tHomeAgentLifetime %hu;\n", (unsigned short)ntohs(ha_info->lifetime));
 			break;
 		case ND_OPT_TARGET_LINKADDR:
 		case ND_OPT_REDIRECTED_HEADER:
 			log(LOG_ERR, "invalid option %d in RA", (int)*opt_str);
+			break;
+		case ND_OPT_PREFIX_INFORMATION:
 			break;
 		default:
 			dlog(LOG_DEBUG, 1, "unknown option %d in RA",
@@ -481,27 +512,35 @@ print_ff(unsigned char *msg, int len, struct sockaddr_in6 *addr, int hoplimit)
 
 			if (ntohl(pinfo->nd_opt_pi_valid_time) == 0xffffffff)
 			{		
+				if (!edefs || DFLT_AdvValidLifetime != 0xffffffff)
 				printf("\t\tAdvValidLifetime infinity; # (0xffffffff)\n");
 			}
 			else
 			{
-				printf("\t\tAdvValidLifetime %lu;\n", (unsigned long) ntohl(pinfo->nd_opt_pi_valid_time));
+				if (!edefs || DFLT_AdvValidLifetime != (unsigned long)ntohl(pinfo->nd_opt_pi_valid_time))
+				printf("\t\tAdvValidLifetime %lu;\n", (unsigned long)ntohl(pinfo->nd_opt_pi_valid_time));
 			}
 			if (ntohl(pinfo->nd_opt_pi_preferred_time) == 0xffffffff)
 			{
+				if (!edefs || DFLT_AdvPreferredLifetime != 0xffffffff)
 				printf("\t\tAdvPreferredLifetime infinity; # (0xffffffff)\n");
 			}
 			else
 			{
-				printf("\t\tAdvPreferredLifetime %lu;\n", (unsigned long) ntohl(pinfo->nd_opt_pi_preferred_time));
+				if (!edefs || DFLT_AdvPreferredLifetime != (unsigned long)ntohl(pinfo->nd_opt_pi_preferred_time))
+				printf("\t\tAdvPreferredLifetime %lu;\n", (unsigned long)ntohl(pinfo->nd_opt_pi_preferred_time));
 			}
+
+			if (!edefs || DFLT_AdvOnLinkFlag != (ND_OPT_PI_FLAG_ONLINK == (pinfo->nd_opt_pi_flags_reserved & ND_OPT_PI_FLAG_ONLINK)))
 			printf("\t\tAdvOnLink %s;\n", 
 				(pinfo->nd_opt_pi_flags_reserved & ND_OPT_PI_FLAG_ONLINK)?"on":"off");
 
+			if (!edefs || DFLT_AdvAutonomousFlag != (ND_OPT_PI_FLAG_AUTO == (pinfo->nd_opt_pi_flags_reserved & ND_OPT_PI_FLAG_AUTO)))
 			printf("\t\tAdvAutonomous %s;\n", 
 				(pinfo->nd_opt_pi_flags_reserved & ND_OPT_PI_FLAG_AUTO)?"on":"off");
 
 			/* Mobile IPv6 ext */
+			if (!edefs || DFLT_AdvRouterAddr != (ND_OPT_PI_FLAG_RADDR == (pinfo->nd_opt_pi_flags_reserved & ND_OPT_PI_FLAG_RADDR)))
 			printf("\t\tAdvRouterAddr %s;\n", 
 				(pinfo->nd_opt_pi_flags_reserved & ND_OPT_PI_FLAG_RADDR)?"on":"off");
 
